--- a/index.html
+++ b/index.html
@@ -277,6 +277,9 @@
             <div>
                 <label for="name">Name</label> <input type="text" name="name" id="name">
             </div>
+            <div>
+                <label for="email">Email</label> <input type="text" email="email" id="email">
+            </div>
 
             <div><label for="age">Age</label> <input type="number" age="age" id="age"></div>
             <div> <label for="faculty">Faculty</label> <input type="text" faculty="faculty" id="faculty"></div>
@@ -284,6 +287,7 @@
             <input type="submit" value="Register">
         </form>
     </div>
+
 </body>
 
 </html>
