--- a/index.html
+++ b/index.html
@@ -114,7 +114,9 @@
         <div class="container">
             <h2 class="special-heading">FORUM AGENDA</h2>
             <p class="desc">&nbsp;</p>
-            <div class="nsubContainer">
+            <input type="radio" checked name="day1" id="day1">
+            <input type="radio" name="day1" id="day2">
+            <div class="nsubContainer day1h">
                 <div class="subcard">
                     <input readonly type="text" id="pm1" class="txtfo">
                     <div class="card">
@@ -190,17 +192,108 @@
                 </div>
 
             </div>
+            <div class="nsubContainer day2h">
+                <div class="subcard">
+                    <input readonly type="text" id="pm01" class="txtfo">
+                    <div class="card">
+                        <div class="profile-pic"></div>
+                        <h3>Eng. Ahmed Mamdouh</h3>
+                        <p>Exploring Generative AI tools for developers</p>
+                        <span>10 AM</span>
+                    </div>
+                </div>
+                <div class="subcard">
+                    <input readonly type="text" id="pm02" class="txtfo">
+                    <div class="card">
+                        <div class="profile-pic"></div>
+                        <h3>Eng. Ahmed Mamdouh</h3>
+                        <p>Exploring Generative AI tools for developers</p>
+                        <span>11 AM</span>
+                    </div>
+                </div>
+                <div class="subcard">
+                    <input readonly type="text" id="pm03" class="txtfo">
+                    <div class="card">
+                        <div class="profile-pic"></div>
+                        <h3>Eng. Ahmed Mamdouh</h3>
+                        <p>Exploring Generative AI tools for developers</p>
+                        <span>12 AM</span>
+                    </div>
+                </div>
+                <div class="subcard">
+                    <input readonly type="text" id="pm04" class="txtfo">
+                    <div class="card">
+
+                        <div class="profile-pic"></div>
+                        <h3>Eng. Ahmed Mamdouh</h3>
+                        <p>Exploring Generative AI tools for developers</p>
+                        <span>1 PM</span>
+                    </div>
+                </div>
+                <div class="subcard">
+                    <input readonly type="text" id="pm05" class="txtfo">
+                    <div class="card">
+                        <div class="profile-pic"></div>
+                        <h3>Eng. Ahmed Mamdouh</h3>
+                        <p>Exploring Generative AI tools for developers</p>
+                        <span>2 PM</span>
+                    </div>
+                </div>
+                <div class="subcard">
+                    <input readonly type="text" id="pm06" class="txtfo">
+                    <div class="card">
+                        <div class="profile-pic"></div>
+                        <h3>Eng. Ahmed Mamdouh</h3>
+                        <p>Exploring Generative AI tools for developers</p>
+                        <span>3 PM</span>
+                    </div>
+                </div>
+                <div class="subcard">
+                    <input readonly type="text" id="pm07" class="txtfo">
+                    <div class="card">
+                        <div class="profile-pic"></div>
+                        <h3>Eng. Ahmed Mamdouh</h3>
+                        <p>Exploring Generative AI tools for developers</p>
+                        <span>4 PM</span>
+                    </div>
+                </div>
+                <div class="subcard">
+                    <input readonly type="text" id="pm08" class="txtfo">
+                    <div class="card">
+                        <div class="profile-pic"></div>
+                        <h3>Eng. Ahmed Mamdouh</h3>
+                        <p>Exploring Generative AI tools for developers</p>
+                        <span>5 PM</span>
+                    </div>
+                </div>
+
+            </div>
+            <div class="lblContainer day1b">
+                <label class="lbl" for="pm1">1</label>
+                <label class="lbl" for="pm2">2</label>
+                <label class="lbl" for="pm3">3</label>
+                <label class="lbl" for="pm4">4</label>
+                <label class="lbl" for="pm5">5</label>
+                <label class="lbl" for="pm6">6</label>
+                <label class="lbl" for="pm7">7</label>
+                <label class="lbl" for="pm8">8</label>
+            </div>
+            <div class="lblContainer day2b">
+                <label class="lbl" for="pm01">1</label>
+                <label class="lbl" for="pm02">2</label>
+                <label class="lbl" for="pm03">3</label>
+                <label class="lbl" for="pm04">4</label>
+                <label class="lbl" for="pm05">5</label>
+                <label class="lbl" for="pm06">6</label>
+                <label class="lbl" for="pm07">7</label>
+                <label class="lbl" for="pm08">8</label>
+            </div>
+            <div class="lblContainer days">
+                <label class="lbl lbld1" for="day1">19th</label>
+                <label class="lbl lbld2" for="day2">20th</label>
+            </div>
         </div>
-        <div class="lblContainer">
-            <label class="lbl" for="pm1">1</label>
-            <label class="lbl" for="pm2">2</label>
-            <label class="lbl" for="pm3">3</label>
-            <label class="lbl" for="pm4">4</label>
-            <label class="lbl" for="pm5">5</label>
-            <label class="lbl" for="pm6">6</label>
-            <label class="lbl" for="pm7">7</label>
-            <label class="lbl" for="pm8">8</label>
-        </div>
+
     </div>
     <div id="partners" class="our-partners section">
         <div class="container">
@@ -272,6 +365,7 @@
     <input class="register" type="checkbox">
     <!-- <a href="register.html" class="register">Register</a> -->
     <div class="frmContainer">
+
         <form action="#" method="get">
             <h2 class="fh2">Add your information to attend the forum</h2>
             <div>
