--- a/index.html
+++ b/index.html
@@ -289,8 +289,8 @@
                 <label class="lbl" for="pm08">8</label>
             </div>
             <div class="lblContainer days">
-                <label class="lbl lbld1" for="day1">19th</label>
-                <label class="lbl lbld2" for="day2">20th</label>
+                <label class="lbl lbld1" for="day1"></label>
+                <label class="lbl lbld2" for="day2"></label>
             </div>
         </div>
 
